Position absolute is safer than fixed due to iOS nav bar pushing the event layer down and breaking the toggle button

--- a/example/demo.css
+++ b/example/demo.css
@@ -30,6 +30,13 @@ body {
     margin-bottom: 1em;
 }
 
+/* You will almost certainly want to be able to scroll the content inside
+ * your component if it extends off screen (long text for example).
+ */
+.fullscreen .demo-component {
+    overflow-y: scroll;
+}
+
 .demo-component button {
     background: #0074E4;
     color: #FFF;
